# tenebris

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  surgical_table.ipynb
.github/workflows/: ci.yml  tenebris-ci.yml
tenebris/: benchmark.py
tenebris/domain/interfaces/: method.py  metric.py
tenebris/domain/methods/: ablation_cam.py  deconvolution.py  deeplift.py  eigen_cam.py  eigen_grad_cam.py  grad_cam.py  grad_cam_plus_plus.py  guided_backprop.py  hires_cam.py  integrated_gradients.py  lime.py  lrp.py  occlusion.py  saliency.py  score_cam.py  shap.py
tenebris/domain/methods/captum/: deconvolution.py  deeplift.py  grad_cam.py  guided_backprop.py  integrated_gradients.py  lime.py  lrp.py  occlusion.py  saliency.py  shap.py
tenebris/domain/methods/pytorch_grad_cam/: __init__.py  ablation_cam.py  eigen_cam.py  eigen_grad_cam.py  grad_cam_plus_plus.py  hires_cam.py  score_cam.py
tenebris/domain/metrics/: computation_time.py  controlled_experiment.py  deletion_check.py  ehr.py  infidelity.py  preservation_check.py  road.py  sensitivity.py
tenebris/domain/tensors/: functions.py
tenebris/services/: benchmark.py
test/: conftest.py  test_sanity.py
