[tool.poetry]
name = "tenebris"
version = "0.0.1"
description = "This package is used for benchmarking of explainability methods for convolution neural networks"
authors = ["Martin Krebs"]

[tool.poetry.dependencies]
python = "^3.11"
captum = "^0.6.0"
grad-cam = "^1.4.8"
scikit-image = "^0.22.0"
torch = "^2.1.0"
torchvision = "^0.16.0"
polars = "^0.19.13"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^0.990"
black = "^22.6.0"
pycln = "^2.1.1"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.10.0"
flake8-eradicate = "^1.3.0"
flake8-pytest-style = "^1.6.0"
flake8 = "^5.0.4"
pep8-naming = "^0.13.1"
isort = "^5.10.1"
pre-commit = "^2.20.0"
scspell3k = "^2.2"
flake8-bugbear = "^23.1.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
show_error_context = true
show_column_numbers = true
show_error_codes = true
show_traceback = true
ignore_missing_imports = true
check_untyped_defs = true
cache_fine_grained = true
strict_equality = true
no_implicit_optional = true
disallow_untyped_defs = true
warn_no_return = false
pretty = true

[tool.pycln]
all = true

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
py_version = 310
profile = "black"
line_length = 120
atomic = true
multi_line_output = 3
default_section = 'THIRDPARTY'
include_trailing_comma = true
use_parentheses = true
combine_as_imports = true
lines_between_types = 1
